<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_main"
                android:text="@string/teamA"
                android:textColor="@color/colorTextLight"
                android:textSize="@dimen/textMed" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginBottom"
                android:text="@string/tSa"
                android:textColor="@color/colorTextDark"
                android:textSize="@dimen/textBig" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:onClick="goalA"
                android:text="@string/goal" />

            <TextView
                android:id="@+id/fouls_team_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/initialValue"
                android:textSize="@dimen/textMed" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:onClick="foulsTeamA"
                android:text="@string/foul" />

            <TextView
                android:id="@+id/corners_team_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/initialValue"
                android:textSize="@dimen/textMed" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:onClick="cornerTeamA"
                android:text="@string/corner" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginTop"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_main"
                android:text="@string/teamB"
                android:textColor="@color/colorTextLight"
                android:textSize="@dimen/textMed" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginBottom"
                android:text="@string/initialValue"
                android:textColor="@color/colorTextDark"
                android:textSize="@dimen/textBig" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:onClick="goalB"
                android:text="@string/goal" />

            <TextView
                android:id="@+id/fouls_team_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/initialValue"
                android:textSize="@dimen/textMed" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:onClick="foulsTeamB"
                android:text="@string/foul" />

            <TextView
                android:id="@+id/corners_team_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/initialValue"
                android:textSize="@dimen/textMed" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginLeft"
                android:layout_marginRight="@dimen/marginRight"
                android:onClick="cornerTeamB"
                android:text="@string/corner" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginBottom"
        android:onClick="reset"
        android:text="@string/reset" />

</RelativeLayout>
